style.css
/* ... */
    .nav-item {
        width: 100%;
    }

    .nav-item:last-child {
        margin-top: auto;
    }

    .nav-link {
        display: flex;
        align-items: center;
        height: 5rem;
        color: var(--text-primary);
        text-decoration: none;
        filter: grayscale(100%) opacity(0.8);
        transition: var(--transitions-speed);
    }

    .nav-link:hover {
        filter: grayscale(0%) opacity(1);
        background: var(--bg-secondary);
        color: var(--text-primary)
    }

    .link-text {
        display: none;
        margin-left: 1rem;
    }

    .nav-link svg {
        width: 2rem;
        min-width: 2rem;
        margin: 0 1.5rem;
    }

    .nav-link:hover .icon {
        filter: invert(35%) sepia(80%) saturate(591%) hue-rotate(217deg) brightness(84%) contrast(97%);
        transition: 300ms;
    }

    @-webkit-keyframes fadeIn {
        from { opacity: 0; }
        to { opacity: 1; }
    }
    @keyframes fadeIn {
        from { opacity: 0; }
        to { opacity: 1; }
    }

    .navbar:hover .link-text { 
        display: block;
        -webkit-animation: fadeIn 1500ms;
        animation: fadeIn 1500ms;
    }

    .dropdown-link-text {
        text-decoration: none;
    }

main {
    margin-top: 0rem;
    margin-left: 5rem;
    padding: 1rem;
}

/*Profile*/

#change-sec {
    margin-top: 0;
    margin-right: 0;
    margin-bottom: 0;
}

.change {
    font-size: 30px;
    font-weight: 500;
    margin-bottom: 8px;
}

.reset {
    font-size: 23px;
    font-weight: 400;
    margin-top: 30px;
    margin-bottom: 30px;

}


/*Myself*/

.text {
    margin-top: 20px;
}

.iframe-prozent {
    max-width: 200px;
}


ol {
    list-style: none;
}


.contact-image {
    margin-left: -180px;
    margin-bottom: -87px;
}

.contact-image2 {
    margin-left: -177px;
    margin-bottom: -55px;
}

.contact-image3 {
    margin-left: -175px;
    margin-top: 20px;
}

.contact-text {
    margin-top: 50px;
    margin-bottom: 35px;
    margin-right: 10px;
}

.contact-text2 {
    margin-right: 32px;
}

.contact-text3 {
    margin-top: -39px;
    margin-right: -109px;
}

/*Login*/

.login{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    height: 100%;
}

::selection{
    background: #6649b8;
    color: #fff;
}

.wrapper{
    overflow: hidden;
    max-width: 390px;
    background: #34343d;
    padding: 30px;
    border-radius: 5px;
    box-shadow: 0px 15px 20px rgba(0,0,0,0.1);
}

.wrapper .title-text{
    display: flex;
    width: 200%;
}

.wrapper .title{
    width: 50%;
    font-size: 35px;
    font-weight: 600;
    text-align: center;
    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
}

.wrapper .slide-controls{
    position: relative;
    display: flex;
    height: 50px;
    width: 100%;   
    margin: 30px 0 10px 0;
    justify-content: space-between;
    border: 1px solid lightgrey;
    border-radius: 5px;
}

.slide-controls .slide{
    height: 100%;
    width: 100%;
    color: #fff;
    font-size: 18px;
    font-weight: 500;
    text-align: center;
    line-height: 48px;
    cursor: pointer;
    z-index: 1;
    transition: all 0.6s ease;
}

.slide-controls label.signup{
    color: #000;
}

.slide-controls .slider-tab{
    position: absolute;
    height: 100%;
    width: 50%;
    left: 0;
    z-index: 0;
    border-radius: 5px;
    background: -webkit-linear-gradient(right, #7101d1, #800fdc, #8e1ae8, #9d23f3, #ac2cff);
    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
}

input[type="radio"]{
    display: none;
}

#signup:checked ~ .slider-tab{
    left: 50%;
}

#signup:checked ~ label.signup{
    color: #fff;
    cursor: default;
    user-select: none;
}

#signup:checked ~ label.login{
    color: lightgray;
}

#login:checked ~ label.signup{
    color: lightgrey;
}

#login:checked ~ label.login{
    cursor: default;
    user-select: none;
}

.wrapper .form-container{
    width: 100%;
    overflow: hidden;
}

.form-container .form-inner{
    display: flex;
    width: 200%;
}

.form-container .form-inner form{
    width: 50%;
    transition: all 0.6s cubic-bezier(0.68,-0.55,0.265,1.55);
}

.form-inner form .field{
    height: 50px;
    width: 100%;
    margin-top: 20px;
}

.form-inner form .field input{
    height: 100%;
    width: 100%;
    color:#fff;
    background: #34343d;
    outline: none;
    padding-left: 15px;
    border-radius: 5px;
    border: 1px solid lightgrey;
    border-bottom-width: 2px;
    font-size: 17px;
    transition: all 0.3s ease;
}

.form-inner form .field input:focus{
    border-color: #6649b8;
}

.form-inner form .field input::placeholder{
    color: #999;
    transition: all 0.3s ease;
}

form .field input:focus::placeholder{
    color: #b3b3b3;
}

.form-inner form .pass-link{
    margin-top: 5px;
}

.form-inner form .signup-link{
    text-align: center;
    margin-top: 30px;
}

.form-inner form .pass-link a,
.form-inner form .signup-link a{
    color: #6649b8;
    text-decoration: none;
}

.form-inner form .pass-link a:hover,
.form-inner form .signup-link a:hover{
    text-decoration: underline;
}

form .btn{
    height: 50px;
    width: 100%;
    border-radius: 5px;
    position: relative;
    overflow: hidden;
}

form .btn .btn-layer{
    height: 100%;
    width: 300%;
    position: absolute;
    left: -100%;
    background: -webkit-linear-gradient(right, #7101d1, #800fdc, #8e1ae8, #9d23f3, #ac2cff);
    border-radius: 5px;
    transition: all 0.4s ease;;
}

form .btn:hover .btn-layer{
    left: 0;
}

form .btn input[type="submit"]{
    height: 100%;
    width: 100%;
    z-index: 1;
    text-align: center;
    position: relative;
    background: none;
    border: none;
    color: #fff;
    padding-left: 0;
    border-radius: 5px;
    font-size: 20px;
    font-weight: 500;
    cursor: pointer;
}

/*Reset password*/

#wrap-pass-reset {
    max-width: 1000px;
}

#wrap-pass-reset h1 {
    font-size: 30px;
    margin: 0;
    margin-bottom: 5px;
}
/* ... */

